--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "color-name": "^1.1.4",
     "combined-stream": "^1.0.8",
     "concat-map": "^0.0.1",
+    "connect-flash": "^0.1.1",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.7.1",
@@ -38,7 +39,8 @@
     "es-errors": "^1.3.0",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "filelist": "^1.0.4",
     "finalhandler": "^1.3.1",
@@ -73,6 +75,8 @@
     "object-inspect": "^1.13.2",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "path-to-regexp": "^0.1.10",
     "pg": "^8.16.3",
     "proxy-addr": "^2.0.7",
